# kumo_onnxruntime

./: .gitignore  CMakeLists.txt  LICENSE  attribute.cpp  attribute.h  benchmark_runner.cpp  executor.cpp  executor.h  graph.cpp  graph.h  graph.mmd  graph_to_mlir_builder.cpp  graph_to_mlir_builder.h  node.h  readme.md  tensor.cpp  tensor.h  test.cpp  test_onnx_tosa.cpp
docs/: graph.md
model/: export_add_model.py
model/mlp/: input.npy  mini_linear.onnx  mini_mlp.ncnn.param  mini_mlp.onnx  mini_mlp.pnnx.onnx  mini_mlp.pnnx.param  mini_mlp.pnnxsim.onnx  mini_mlp_ncnn.py  mini_mlp_pnnx.py  mlp.py  output.npy
model/mnist/: mnist_cnn.onnx
model/resnet18/: resnet_dummy.py
